Fix: Changes position of footer on Content pages
Hopefully fixes the footer issue with covering up the content on works
pages in smaller responsive views.  Also replaces gallery thumbnail for
Pheronus Short Film.

--- a/css/content.css
+++ b/css/content.css
@@ -84,10 +84,11 @@ h2 {
   height: 460px;
 }
 footer {
-  position:fixed;
+  /*position:fixed;*/
   left:0px;
   bottom:0px;
-  height:70px;
+  /*height:70px;*/
+  height:50px;
   width:100%;
 }
 
